# secure-pr-agent

./: .env.example  Dockerfile.sandbox  README.md  main.py  pyproject.toml
pr_agent/: __init__.py  agent.py  cli.py  git.py  llm.py
pr_agent/rag/: __init__.py  chunker.py  indexer.py  retriever.py
pr_agent/sandbox/: __init__.py  runner.py
pr_agent/utils/: __init__.py  logger.py  mermaid_validation.py
tests/: test_evals.py
